--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "bootstrap": "^5.3.8",
+    "@tabler/icons-react": "^3.34.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "typescript": "^4.9.5",
